feat: Update icons with new colors and add search functionality
This commit updates the icons in the application by modifying the SVG files for the plus, search, and trash icons. The plus icon now has a green color (#27AE60), the search icon has a dark gray color (#2C3E50), and the trash icon has a red color (#E74C3C). Additionally, a new search input field has been added to the UI, along with appropriate CSS styles for the icons.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <main>
         <section class="side">
             <section class="iconRow">
-                <img src="./Assets/icons/plus.svg" alt="add note">
+                <img src="./Assets/icons/plus.svg" alt="add note" class="add">
+                <input type="text" class="searchInput">
+                <img src="./Assets/icons/search.svg" alt="search" class="search">
             </section>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum vitae, perferendis voluptatem animi deleniti quis error aspernatur modi magni saepe eos qui in molestias quos beatae magnam unde quod iure.</section>
         <section class="note">
             <section class="iconRow right">
-                <img src="./Assets/icons/trash.svg" alt="delete">
+                <img src="./Assets/icons/trash.svg" alt="delete" class="delete">
             </section>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum explicabo labore atque consequatur maxime provident inventore! Eos placeat, deleniti nemo, qui fugit dignissimos quidem maiores aliquid vel id, itaque pariatur?</section>
     </main>
