--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes</title>
     <link rel="stylesheet" href="./Assets/styles/general.css">
 </head>
+
 <body>
     <main>
         <section class="side">
@@ -14,12 +16,25 @@
                 <input type="text" class="searchInput">
                 <img src="./Assets/icons/search.svg" alt="search" class="search">
             </section>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum vitae, perferendis voluptatem animi deleniti quis error aspernatur modi magni saepe eos qui in molestias quos beatae magnam unde quod iure.</section>
+            <section class="notesOverview">
+                <div class="userNoteCard">
+                    <h3>Title</h3>
+                    <h4>Date added</h4>
+                </div>
+            </section>
+        </section>
         <section class="note">
             <section class="iconRow right">
                 <img src="./Assets/icons/trash.svg" alt="delete" class="delete">
             </section>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum explicabo labore atque consequatur maxime provident inventore! Eos placeat, deleniti nemo, qui fugit dignissimos quidem maiores aliquid vel id, itaque pariatur?</section>
+            <section class="userNote">
+                <div class="dateAdded">12.34.5678</div>
+                <input type="text" placeholder="Add title" class="addTitle">
+                <input type="text" placeholder="Start writing..." class="startWriting">
+            </section>
+            
+        </section>
     </main>
 </body>
+
 </html>
