feat: Add functionality to add user note card
This commit adds functionality to the "Add" button, allowing users to create a new user note card. When the button is clicked, a new user note card is dynamically created and appended to the sidebar. The card includes a title and the current date.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </section>
             <section class="notesOverview">
                 <div class="userNoteCard">
-                    <h3>Title</h3>
-                    <h4>Date added</h4>
+                    <h3 class="titleCard">Title</h3>
+                    <h4 class="dateAddedCard">Date added</h4>
                 </div>
             </section>
         </section>
